# vkr-expert

./: README.md  calculate.py  main.py  pyproject.toml
buildings/: house.py
src/: calculate.py  explanation.py  schemas.py
